[#227] Make extendBindingFromURLLoadsLocalDataCorrectly consistent with the real usage of saving and reading from URIs